Fixed z-index in page-caption block

--- a/source/sass/blocks/page-caption.scss
+++ b/source/sass/blocks/page-caption.scss
@@ -27,7 +27,6 @@
   background-image: url("../img/bg-back-mobile@1x.jpg");
   background-repeat: no-repeat;
   background-position: center 0;
-  z-index: -1;
 }
 
 .page-caption__wrapper--image::after {
