--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -8,6 +8,7 @@
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
+  z-index: 1;
 }
 
 @media (min-width: $tablet-width) {
